--- a/site/notebooks/EXECUTED/model_development/3-integrate_custom_tests.ipynb
+++ b/site/notebooks/EXECUTED/model_development/3-integrate_custom_tests.ipynb
@@ -913,10 +913,10 @@
     "    <img src= \"add-content-block.gif\" alt=\"Screenshot showing insert block button in model documentation\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
     "    <br><br>\n",
     "\n",
-    "5. Click **+** and then select **Test-Driven Block** under FROM LIBRARY:\n",
+    "5. Click **+** and then select **Test-Driven Block**:\n",
     "\n",
-    "    - Click on **Custom** under TEST-DRIVEN in the left sidebar.\n",
-    "    - Select the two custom `ConfusionMatrix` tests you logged above:\n",
+    "    - In the search bar, type in `ConfusionMatrix`.\n",
+    "    - Select the custom `ConfusionMatrix` tests you logged above:\n",
     "\n",
     "    <img src= \"selecting-confusion-matrix-test.png\" alt=\"Screenshot showing the ConfusionMatrix tests selected\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
     "    <br><br>\n",
