--- a/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
+++ b/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Learn how to use ValidMind for your end-to-end model validation process with our series of four introductory notebooks. In this third notebook, develop a potential challenger model and then pass your model and its predictions to ValidMind.\n",
     "\n",
-    "A *challenger model* is an alternate model that attempts to outperform the champion model, ensuring that the best performing fit-for-purpose model is always considered for deployment. Challenger models also help avoid over-reliance on a single model, and allow testing of new features, algorithms, or data sources without disrupting the production lifecycle."
+    "A *challenger model* is an alternate model that attempt to outperform the champion model, ensuring that the best performing fit-for-purpose model is always considered for deployment. Challenger models also help avoid over-reliance on a single model, and allow testing of new features, algorithms, or data sources without disrupting the production lifecycle."
    ]
   },
   {
@@ -29,7 +29,7 @@
     "- [Initializing the model objects](#toc5_)    \n",
     "  - [Initialize the model objects](#toc5_1_)    \n",
     "  - [Assign predictions](#toc5_2_)    \n",
-    "- [Running model evaluation tests](#toc6_)    \n",
+    "- [Running model validation tests](#toc6_)    \n",
     "  - [Run model performance tests](#toc6_1_)    \n",
     "    - [Evaluate performance of the champion model](#toc6_1_1_)    \n",
     "    - [Log a model finding](#toc6_1_2_)    \n",
@@ -514,7 +514,7 @@
    "source": [
     "<a id='toc6_'></a>\n",
     "\n",
-    "## Running model evaluation tests\n",
+    "## Running model validation tests\n",
     "\n",
     "With everything ready for us, let's run the rest of our validation tests. We'll focus on comprehensive testing around model performance of both the champion and challenger models going forward as we've already verified the data quality of the datasets used to train the champion model."
    ]
