Added new Headings in the FAQ section

--- a/site/faq/faq-testing.qmd
+++ b/site/faq/faq-testing.qmd
@@ -44,6 +44,11 @@ Yes, {{< var vm.product >}} allows tests to be manipulated at several levels:
 In addition to custom tests, you can also add use case and test-specific context for any test to enhance the LLM-generated test descriptions using the {{< var validmind.developer >}}.[^8]
 :::
 
+## How do I log tests as a developer?
+
+## How do I log tests as a validator?
+
+
 {{< include _faq-explainability.qmd >}}
 
 {{< include _faq-synthetic-datasets.qmd >}}
